<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#D7FACB"
    tools:context=".MainActivity"
    android:orientation="vertical">

  <!-- HeaderLayout -->
  <!-- Fin HeaderLayout -->

  <!-- Cuadro de ayuda -->

  <FrameLayout
      android:id="@+id/HeaderLayout"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:background="@drawable/header_drawable"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/textLogoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="33dp"
        android:text="@string/text_logo_app"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/help_drawable">

      <TextView
          android:id="@+id/text_help"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/text_help"
          android:textAlignment="center"
          android:textSize="18sp"
          android:textStyle="bold" />

    </FrameLayout>

  </FrameLayout>

  <!-- Fin Cuadro de ayuda -->
  <FrameLayout
      android:id="@+id/InfoLayout"
      android:layout_width="370dp"
      android:layout_height="132dp"
      android:layout_gravity="center"
      android:layout_marginTop="25dp"
      android:elevation="12dp"
      android:background="@drawable/body_drawable"
      android:clickable="true"
      android:onClick="openInfoActivity">
    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_info_proceso"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />
  </FrameLayout>
  <FrameLayout
      android:id="@+id/PreoperatorioLayout"
      android:layout_width="370dp"
      android:layout_height="132dp"
      android:layout_gravity="center"
      android:layout_marginTop="25dp"
      android:elevation="12dp"
      android:background="@drawable/body_drawable">
    <TextView
        android:id="@+id/text_preoperatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_preoperatorio"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />
  </FrameLayout>

</LinearLayout>
