<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="#D7FACB"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->
    <include layout="@layout/activity_header" />

        <!-- Resto del contenido -->

    <TextView
            android:id="@+id/text_info_proceso"
            android:gravity="center"
            android:text="@string/text_info_proceso"
            android:background="@drawable/body_drawable"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:elevation="12dp"
            android:clickable="true"
            android:onClick="openInfoActivity"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text_preoperatorio"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:elevation="12dp"
            android:background="@drawable/body_drawable"
            android:layout_height="132dp"
            android:text="@string/text_preoperatorio"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />


    <TextView
        android:id="@+id/text_postoperatorio"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:elevation="12dp"
        android:background="@drawable/body_drawable"
        android:layout_height="132dp"
        android:text="@string/text_postoperatorio"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>
